Fix T61065: missing shader update when adding texture slot.